# RsR

./: CMakeLists.txt  CMakePresets.json  README.md
configs/: example_config.txt  landscape_config.txt  letter_config.txt  teaser_config.txt  tree_config.txt
src/: CMakeLists.txt  RS.cpp  RS.h  Recon.cpp  Recon.h  eval.cpp  eval.h  faceloop.cpp  faceloop.h  graph_utils.cpp  graph_utils.h  happly.h  io.cpp  io.h  math_util.cpp  math_util.h  mst.cpp  mst.h  normal.cpp  normal.h  timer.h  triangulation.cpp  triangulation.h
